// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionItem /> should render when [ready=false] 1`] = `
<Box__LinkBox
  key="foo"
  to="/subtraction/foo"
>
  <Item__StyledSubtractionItemHeader>
    <span>
      Foo
    </span>
    <span>
      <SubtractionItemIcon
        ready={false}
      />
       
      Creating
    </span>
  </Item__StyledSubtractionItemHeader>
  <SubtractionAttribution
    handle="bar"
  />
</Box__LinkBox>
`;

exports[`<SubtractionItem /> should render when [ready=true] 1`] = `
<Box__LinkBox
  key="foo"
  to="/subtraction/foo"
>
  <Item__StyledSubtractionItemHeader>
    <span>
      Foo
    </span>
    <span>
      <SubtractionItemIcon
        ready={true}
      />
       
      Ready
    </span>
  </Item__StyledSubtractionItemHeader>
  <SubtractionAttribution
    handle="bar"
  />
</Box__LinkBox>
`;

exports[`<SubtractionItemIcon /> should render when [ready=false] 1`] = `
<Loader
  color="primary"
  size="14px"
/>
`;

exports[`<SubtractionItemIcon /> should render when [ready=true] 1`] = `
<Icon
  color="green"
  faStyle="fas"
  fixedWidth={false}
  name="check"
/>
`;
